Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -455,6 +455,7 @@
     "description2": "Descripció 2",
     "description3": "Descripció 3",
     "design": "Disseny",
+    "destination": "Destinació",
     "destination-warehouse": "Magatzem de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducció",
     "translations": "Traduccions",
+    "transport": "Transport",
     "travel": "Viatge",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
