--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -455,6 +455,7 @@
     "description2": "Beschreibung 2",
     "description3": "Beschreibung 3",
     "design": "Design",
+    "destination": "Ziel",
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
     "details": "Details",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Bestandsübertragungen",
     "translation": "Übersetzung",
     "translations": "Übersetzungen:",
+    "transport": "Transport",
     "travel": "Reise",
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
