--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -455,6 +455,7 @@
     "description2": "Description 2",
     "description3": "Description 3",
     "design": "Design",
+    "destination": "Destination",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
     "details": "Details",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Translation",
     "translations": "Translations",
+    "transport": "Transport",
     "travel": "Travel",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
