--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -455,6 +455,7 @@
     "description2": "Descripción Nivel 2",
     "description3": "Descripción Nivel 3",
     "design": "Diseño",
+    "destination": "Destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Traducción",
     "translations": "Traducciones",
+    "transport": "Transporte",
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
