--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -455,6 +455,7 @@
     "description2": "2. deskribapena",
     "description3": "3. deskribapena",
     "design": "Diseinua",
+    "destination": "Helmuga",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
     "details": "Xehetasunak",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Stock transferentziak",
     "translation": "Itzulpena",
     "translations": "Itzulpenak",
+    "transport": "Garraioa",
     "travel": "Bidaia",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
