--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -455,6 +455,7 @@
     "description2": "Description 2",
     "description3": "Description 3",
     "design": "Diseño",
+    "destination": "Destination",
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
     "details": "Détails",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferts de stock",
     "translation": "Traduction",
     "translations": "traductions:",
+    "transport": "Transport",
     "travel": "Voyage",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
