--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -455,6 +455,7 @@
     "description2": "Descrición 2",
     "description3": "Descrición 3",
     "design": "Deseño",
+    "destination": "Destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferencias de stock",
     "translation": "Tradución",
     "translations": "Traducións",
+    "transport": "Transporte",
     "travel": "Viaxe",
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
