--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -455,6 +455,7 @@
     "description2": "Descrizione 2",
     "description3": "Descrizione 3",
     "design": "Design",
+    "destination": "Destinazione",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "details": "Dettagli",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Trasferimenti di stock",
     "translation": "Traduzione",
     "translations": "Traduzioni",
+    "transport": "trasporto",
     "travel": "Viaggio",
     "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
