--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -455,6 +455,7 @@
     "description2": "Opis 2",
     "description3": "Opis 3",
     "design": "Projektowanie",
+    "destination": "Cel",
     "destination-warehouse": "Magazyn docelowy",
     "detail": "Szczegóły",
     "details": "Detalles",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transfery zapasów",
     "translation": "Tłumaczenie",
     "translations": "Tłumaczenia",
+    "transport": "Transport",
     "travel": "Viaje",
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
