--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -455,6 +455,7 @@
     "description2": "Descrição 2",
     "description3": "Descrição 3",
     "design": "Design",
+    "destination": "Destino",
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferências de stock",
     "translation": "Tradução",
     "translations": "Traduções",
+    "transport": "Transporte",
     "travel": "Viagem",
     "try-again-later": "T",
     "tuesday": "terça-feira",
