--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -455,6 +455,7 @@
     "description2": "Descripció 2",
     "description3": "Descripció 3",
     "design": "Disseny",
+    "destination": "Destí",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -1584,6 +1585,7 @@
     "transfers-stock": "Transferències d'estoc",
     "translation": "Traducción",
     "translations": "Traduccions",
+    "transport": "Transport",
     "travel": "Viage",
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
