Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "Dimecres",
+    "weekly": "Setmanalment",
     "weeks": "Setmanes",
     "weight": "Pes",
     "which-logs-store": "Què logs emmagatzemar",
