--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1679,6 +1679,7 @@
     "web": "web:",
     "website": "Webseite",
     "wednesday": "Mittwoch",
+    "weekly": "Wöchentlich",
     "weeks": "Wochen",
     "weight": "Gewicht",
     "which-logs-store": "Welche Logs speichern",
