--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Website",
     "wednesday": "Wednesday",
+    "weekly": "Weekly",
     "weeks": "Weeks",
     "weight": "Weight",
     "which-logs-store": "Which logs store",
