--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Sitio Web",
     "wednesday": "Miércoles",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Qué logs almacenar",
