--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Sitio web.",
     "wednesday": "Miércoles",
+    "weekly": "Semanal",
     "weeks": "semanas",
     "weight": "Peso",
     "which-logs-store": "Qué logs almacenar",
