--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
+    "weekly": "Astero",
     "weeks": "Asteak",
     "weight": "Pisua",
     "which-logs-store": "Zein log gorde",
