--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
+    "weekly": "weekly",
     "weeks": "Semaines",
     "weight": "Peso",
     "which-logs-store": "Quels journaux conserver",
