--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1679,6 +1679,7 @@
     "web": "web:",
     "website": "Sito web",
     "wednesday": "Mercoledì",
+    "weekly": "settimanale",
     "weeks": "Settimane",
     "weight": "Peso",
     "which-logs-store": "Quali log archiviare",
