--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1679,6 +1679,7 @@
     "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Środa",
+    "weekly": "Tygodniowy",
     "weeks": "Tygodnie",
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
