--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1679,6 +1679,7 @@
     "web": "Rede",
     "website": "Local na rede Internet",
     "wednesday": "quarta-feira",
+    "weekly": "Semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Quais logs armazenar",
