--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
+    "weekly": "setmanal",
     "weeks": "Semanes",
     "weight": "Peso",
     "which-logs-store": "Quins registes almagasenar",
