--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1679,6 +1679,7 @@
     "web": "Web",
     "website": "Website",
     "wednesday": "quarta-feira",
+    "weekly": "semanal",
     "weeks": "Semanas",
     "weight": "Peso",
     "which-logs-store": "Quais logs armazenar",
