--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -909,6 +909,7 @@
     "login-cookie-fail": "La cookie de sessió ha fallat",
     "login-image": "Imatge de login",
     "login-ok": "Sessió iniciada satisfactòriament (cookie). Usuari: '%nick%'",
+    "login-password-changed": "Contrasenya canviada correctament",
     "login-password-fail": "Error a l'iniciar sessió",
     "login-text": "Escriu el vostre nom d'usuari i contrasenya per iniciar sessió",
     "login-to-continue": "Iniciar sessió per continuar",
