--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -909,6 +909,7 @@
     "login-cookie-fail": "Session cookie failed",
     "login-image": "Login image",
     "login-ok": "Login successfully (cookie). User: '%nick%'",
+    "login-password-changed": "Password changed successfully",
     "login-password-fail": "Login failed",
     "login-text": "Type your user name and password to login",
     "login-to-continue": "Login to continue",
