--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -909,6 +909,7 @@
     "login-cookie-fail": "Cookie de sesión no válida: probablemente haya iniciado sesión desde otro dispositivo o navegador.",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
+    "login-password-changed": "Contraseña cambiada correctamente",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
