--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -909,6 +909,7 @@
     "login-cookie-fail": "Cookie de sessão inválida: provavelmente você fez login a partir de outro dispositivo ou navegador.",
     "login-image": "Imagem de login",
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
+    "login-password-changed": "Senha alterada com sucesso",
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
     "login-to-continue": "Faça login para continuar",
