Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referència + Descripció",
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
+    "refund": "Devolució",
     "refund-amount": "Quantitat retornada",
     "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
