--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -909,7 +909,7 @@
     "login-cookie-fail": "Neplatný relační cookie",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
-    "login-password-changed": "Contraseña cambiada correctamente",
+    "login-password-changed": "Heslo bylo úspěšně změněno",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
@@ -1281,6 +1281,7 @@
     "reference+description": "Referencia + Descripción",
     "refresh": "Recargar",
     "refresh-page": "Recargar página",
+    "refund": "Devolución",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Vrácení platebního dokladu %document%",
     "refunds": "Devoluciones",
