--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referenz + Beschreibung",
     "refresh": "Aktualisierung",
     "refresh-page": "Seite neu laden",
+    "refund": "Rückerstattung",
     "refund-amount": "Rückzahlungsbetrag",
     "refund-payment-concept": "Rückzahlung der Zahlung %document%",
     "refunds": "Rückerstattungen",
