--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Reference + Description",
     "refresh": "Refresh",
     "refresh-page": "Refresh page",
+    "refund": "Refund",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Refund of payment %document%",
     "refunds": "Refunds",
