--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referencia + Descripción",
     "refresh": "Actualizar",
     "refresh-page": "Recargar página",
+    "refund": "Devolución",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Devoluciones",
