--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Erreferentzia + deskribapena",
     "refresh": "Eguneratu",
     "refresh-page": "Orria eguneratu",
+    "refund": "Itzulketa",
     "refund-amount": "Itzulketaren zenbatekoa",
     "refund-payment-concept": "Devoluzioa egingo da %document% dokumentua itzulita",
     "refunds": "Itzulketak",
