--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Référence + Description",
     "refresh": "Rafraîchir",
     "refresh-page": "Rafraîchir la page",
+    "refund": "Devolución",
     "refund-amount": "Montant retourné",
     "refund-payment-concept": "Remboursement du reçu %document%",
     "refunds": "Remboursements",
