--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referencia + Descrición",
     "refresh": "Actualizar",
     "refresh-page": "Actualiza a páxina",
+    "refund": "Devolución",
     "refund-amount": "Cantidade devolta",
     "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
