--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Riferimento + Descrizione",
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
+    "refund": "Rimborso",
     "refund-amount": "Importo rimborsato",
     "refund-payment-concept": "Rimborso del documento %document%",
     "refunds": "Rimborsi",
