--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referencja + Opis",
     "refresh": "Odśwież",
     "refresh-page": "Odśwież stronę",
+    "refund": "Zwolnienie",
     "refund-amount": "Kwota zwrotu",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Zwróty",
