--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1281,6 +1281,7 @@
     "reference+description": "Referência + Descrição",
     "refresh": "Atualizar",
     "refresh-page": "Atualizar a página",
+    "refund": "Reembolso",
     "refund-amount": "Quantidade devolvida",
     "refund-payment-concept": "Reembolso do documento %document%",
     "refunds": "Reembolsos",
