--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -909,7 +909,7 @@
     "login-cookie-fail": "Fallou a cookie da sesión",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada con éxito (cookie). Usuario: '%nick%'",
-    "login-password-changed": "Contraseña cambiada correctamente",
+    "login-password-changed": "Contrasinal cambiado correctamente",
     "login-password-fail": "Fallo de sesión",
     "login-text": "Introduce o teu nome de usuario e contrasinal para iniciar sesión",
     "login-to-continue": "Inicie sesión para continuar",
