--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1460,6 +1460,7 @@
     "stock-transfers": "Transferências de stock",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
+    "storage": "armazenamento",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
     "stripe": "Stripe",
