--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Fehler beim Überprüfen der Nummer '%vat-number%' im VIES-System",
     "error-connecting-memcache": "Fehler beim Verbinden mit dem Memcache-Server.",
     "error-deleting-lines": "Fehler beim Zeilen löschen",
+    "error-generating-qr-code": "QR konnte nicht generiert werden: %message%, %url%",
     "error-no-name-in-settings": "Fehler beim Testen der Ansicht %viewName%. Keine 'name'-Spalte in XML",
     "error-on-xml-file": "Fehler in der XML-Datei %fileName%",
     "error-processing-xmlview": "Fehler beim Verarbeiten der XML-Ansicht, Datei '0' existiert nicht oder ist nicht korrekt",
@@ -1369,6 +1370,7 @@
     "send": "Senden",
     "send-anonymous-data": "Anonyme Daten senden",
     "send-audios": "A",
+    "send-code-totp": "TOTP-Code senden",
     "send-documents": "Dokumente senden",
     "send-images": "Bilder senden",
     "send-invoices": "Rechnungen senden",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Gesamtsteuerbetrag von 0 1 falsch (2). Richtige Menge: 3",
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
     "totals": "Summen",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Stadt, Dorf",
     "tracking-code": "Tracking-Code",
     "transfer": "Übertragen",
