--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Error checking '%vat-number%' in VIES system",
     "error-connecting-memcache": "Error connecting to Memcache server.",
     "error-deleting-lines": "Error deleting lines",
+    "error-generating-qr-code": "Could not generate QR: %message%, %url%",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Error processing XML View, file '%fileName%' not exist or is incorrect",
@@ -1369,6 +1370,7 @@
     "send": "Send",
     "send-anonymous-data": "Send anonymous data",
     "send-audios": "Send audio",
+    "send-code-totp": "Send TOTP code",
     "send-documents": "Send documents",
     "send-images": "Send images",
     "send-invoices": "Send invoices",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Total tax amount of %docType% %docCode% incorrect (%docTotalTax%). Correct amount: %calcTotalTax%",
     "totallinea-value-error": "Error in the totallinea value of the VAT line of the tax %taxCode% of the invoice. Correct value: %totalLine%",
     "totals": "Totals",
+    "totp-secret-key-not-set": "User %nick% does not have a TOTP secret key set",
     "town": "Town",
     "tracking-code": "Tracking code",
     "transfer": "Transfer",
