--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Errore bat gertatu da Memcache zerbitzarira konektatzean.",
     "error-deleting-lines": "Errore bat gertatu da lerroak ezabatzean",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Errore bat dago %viewName% ikuspegian. Xml-an zutabe baten 'name' jakinaraztea falta da",
     "error-on-xml-file": "Errore bat dago %fileName% XML artxiboan",
     "error-processing-xmlview": "Errore bat gertatu XML ikuspegia prozesatzean, '%fileName%' artxiboa ez da existitzen edo ez da zuzena",
@@ -1369,6 +1370,7 @@
     "send": "Bidali",
     "send-anonymous-data": "Datu anonimoak bidali",
     "send-audios": "Bidali audioak",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Bidali dokumentuak",
     "send-images": "Bidali irudiak",
     "send-invoices": "Fakturak bidali",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "%docType% %docCode% (%docTotalTax%) BEZ totala ez da zuzena. Total zuzena: %calcTotalTax%",
     "totallinea-value-error": "Fakturaren %taxCode% zergaren lerroko BEZ totala baliogabea. Balio zuzena: %totalLine%",
     "totals": "Totala",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Herria",
     "tracking-code": "Jarraipen kodea",
     "transfer": "Transferentzia",
