--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Erreur lors de la vérification du numéro de TVA '%vat-number%' dans le système VIES",
     "error-connecting-memcache": "Erreur lors de la connexion au serveur Memcache.",
     "error-deleting-lines": "Erreur lors de la suppression des lignes",
+    "error-generating-qr-code": "Impossible de générer le QR : %message%, %url%",
     "error-no-name-in-settings": "Erreur dans %viewName% view. Manquant d'informer le 'nom' dans une colonne du xml",
     "error-on-xml-file": "Le fichier XML %fileName% a provoqué une erreur",
     "error-processing-xmlview": "Erreur lors du traitement de XML View, le fichier '%fileName%' n'existe pas ou est incorrect",
@@ -1369,6 +1370,7 @@
     "send": "Envoyer",
     "send-anonymous-data": "Envoyer des données anonymes",
     "send-audios": "Envoyer des audios",
+    "send-code-totp": "Envoyer le code TOTP",
     "send-documents": "Envoyer des documents",
     "send-images": "Envoyer des images",
     "send-invoices": "Envoyer des factures",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Montant total des taxes de %docType% %docCode% incorrect (%docTotalTax%). Montant correct: %calcTotalTax%",
     "totallinea-value-error": "Erreur dans la valeur totallinea de la ligne de TVA de la taxe %taxCode% de la facture. Valeur correcte: %totalLine%",
     "totals": "totaux",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Ville",
     "tracking-code": "Code de suivi",
     "transfer": "Transfert",
