--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Errore nel verificare il numero '%vat-number%' nel sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "Errore nella cancellazione delle righe",
+    "error-generating-qr-code": "Non è stato possibile generare il QR: %message%, %url%",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
     "error-on-xml-file": "Errore nel file XML %fileName%",
     "error-processing-xmlview": "Errore nell'elaborazione della vista XML, il file '0' non esiste o non è corretto",
@@ -1369,6 +1370,7 @@
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Invia audio",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Inviare documenti",
     "send-images": "Invia immagini",
     "send-invoices": "Invia fatture",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Importo totale della tassa pari a 0 1 non corretto (2). Importo corretto: 3",
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
     "totals": "Totali",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Cittadina",
     "tracking-code": "codice di tracciamento",
     "transfer": "trasferimento",
