--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Błąd połączenia z serwerem Memcache.",
     "error-deleting-lines": "Błąd podczas usuwania linii",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Błąd przetwarzania XML widoku, plik '%fileName%' nie istnieje lub jest źle sformułowany",
@@ -1369,6 +1370,7 @@
     "send": "Wysłać",
     "send-anonymous-data": "Wyślij dane anonimowe",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Wyślij faktury",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Całkowita wartość VAT %docType% %docCode% niepoprawna (%docTotalTax%). Właściwa wartość: %calcTotalTax%",
     "totallinea-value-error": "Błąd wartości totallinea w linii VAT podatku %taxCode% w fakturze. Prawidłowa wartość: %totalLine%",
     "totals": "Całkowite",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Miejscowość",
     "tracking-code": "Kod śledzenia",
     "transfer": "Transfer",
