--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar linhas",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Erro na vista %viewName%. Falta informar a coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
@@ -1369,6 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dados anónimos",
     "send-audios": "Enviar áudios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
     "totals": "Totais",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "Transferência",
