--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Error en archivo XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
@@ -1369,6 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
     "send-invoices": "Enviar facturas",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Valor total igv de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IGV del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Totales",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
