--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Erro comprobando o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar co servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar liñas",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error na vista %viewName%. Falta informar el 'name' nalgunha columna do xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro procesando o XML da vista, o ficheiro '%fileName%' non existe ou é incorrecto",
@@ -1369,6 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imaxes",
     "send-invoices": "Enviar facturas",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Valor total ive de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Erro no valor total da liña de IVE do imposto %taxCode% da factura. Valor correcto: %totalLínea%",
     "totals": "Totais",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Cidade",
     "tracking-code": "Código de seguimento",
     "transfer": "Transferencia",
