--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar ao servidor Memcache.",
     "error-deleting-lines": "Erro ao excluir linhas",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Erro ao testar a vista %viewName%. Nenhuma coluna 'name' no xml",
     "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '%fileName%' não existe ou está mal formado",
@@ -1369,6 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dados anônimos",
     "send-audios": "Enviar áudios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "Valor total do IVA de %docType% %docCode% incorreto (%docTotalTax%). Valor correto: %calcTotalTax%",
     "totallinea-value-error": "Erro no valor totallinea da linha de IVA do imposto %taxCode% da fatura. Valor correto: %totalLine%",
     "totals": "Totais",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "transferir",
