--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -548,6 +548,7 @@
     "error-checking-vat-number": "Error comprovant el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Ha hagut un erro conectant al servidor Memcaché.",
     "error-deleting-lines": "Erro borrant llínees",
+    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Erro comprovant la vista %viewName%. No hi ha cap columna 'name' en el xml",
     "error-on-xml-file": "Erro en l'archiu %fileName%",
     "error-processing-xmlview": "Error en processar la vista XML, el fitxer '%fileName%' not existix o és incorrecte",
@@ -1369,6 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Envia àudios",
+    "send-code-totp": "Enviar código TOTP",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1581,6 +1583,7 @@
     "totaliva-value-error": "El total del IVA de %docType% %docCode% és incorrecte (%docTotalTax%). La cantitat correcta és: %calcTotalTax%",
     "totallinea-value-error": "Erro en el valor totallinea de la llínea del IVA de l'impost %taxCode% de la factura. El valor correcte és: %totalLine%",
     "totals": "Totals",
+    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
     "town": "Ciutat",
     "tracking-code": "tracking-code",
     "transfer": "Transferència",
