Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1370,7 +1370,7 @@
     "send": "Bidali",
     "send-anonymous-data": "Datu anonimoak bidali",
     "send-audios": "Bidali audioak",
-    "send-code-totp": "Enviar código TOTP",
+    "send-code-totp": "TOTP kodea bidali",
     "send-documents": "Bidali dokumentuak",
     "send-images": "Bidali irudiak",
     "send-invoices": "Fakturak bidali",
