--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -548,7 +548,7 @@
     "error-checking-vat-number": "Error comprovant el nombre '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "S'ha produït un error en connectar-se al servidor Memcache.",
     "error-deleting-lines": "Error en eliminar línies",
-    "error-generating-qr-code": "No se pudo generar el QR: %message%, %url%",
+    "error-generating-qr-code": "No s'ha pogut generar el QR: %message%, %url%",
     "error-no-name-in-settings": "Error a la vista %viewName%. Cal informar el 'name' en qualcuna columna de l'xml",
     "error-on-xml-file": "Error en arxiu XML %fileName%",
     "error-processing-xmlview": "S'ha produït un error al processar la vista XML, el fitxer '%fileName%' no existeix o no és correcte",
@@ -1370,7 +1370,7 @@
     "send": "Enviar",
     "send-anonymous-data": "Enviar dades anònimes",
     "send-audios": "Enviar àudios",
-    "send-code-totp": "Enviar código TOTP",
+    "send-code-totp": "Enviar codi TOTP",
     "send-documents": "Enviar documents",
     "send-images": "Enviar imatges",
     "send-invoices": "Enviar factures",
@@ -1583,7 +1583,7 @@
     "totaliva-value-error": "Import totaliva de %docType% %docCode% incorrecte (%docTotalTax%). Import correcte: %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línia IVA de l'impost %taxCode% de la factura. Valor correcte: %totalLine%",
     "totals": "Totals",
-    "totp-secret-key-not-set": "El usuario %nick% no tiene una clave secreta TOTP configurada",
+    "totp-secret-key-not-set": "L'usuari %nick% no té una clau secreta TOTP configurada",
     "town": "Població",
     "tracking-code": "Codi de seguiment",
     "transfer": "Transferència",
